PyMaker/datas/object2/RawHTML/Python_DOC_referPages.make-a-dictionary-variable-global-in-python3.txt
<div class="post-text" itemprop="text">
<p>I have a dictionary variable called:</p>
<pre><code>d["button1"]
</code></pre>
<p>This works fine in something such as:</p>
<pre><code>print(d["button1"])
</code></pre>
<p>However, I am unable to make this variable global by using:</p>
<pre><code>global d["button1"]
</code></pre>
<p>Because I'm getting a syntax error:</p>
<pre><code>    global d["button1"]
            ^
    SyntaxError: invalid syntax
</code></pre>
<p>I would like to know if there is a way to fix this or another way of going about this. </p>
</div>
<div class="post-text" itemprop="text">
<p>You can set d to be global and reference d["button1"]</p>
<pre><code>global d
...
d["button1"] = 
</code></pre>
</div>
<span class="comment-copy"><code>global</code> argument is a variable name, not a value. <code>d["button1"]</code> isn't a variable. <code>d</code> is a variable. Sounds like XY problem</span>
<span class="comment-copy">Thanks, this fixed my problem!</span>
